<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_transactions"
            android:icon="@drawable/ic_transaction_placeholder"
            android:title="@string/nav_transactions" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/nav_settings" />
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/ic_menu_rotate"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_exit"
            android:icon="@android:drawable/ic_menu_close_clear_cancel"
            android:title="@string/nav_exit" />
    </group>
</menu>
